# resume-ats

./: .gitignore  be.sh  fe.sh  kurt.sh  run.sh
.claude/: settings.json  settings.local.json
.claude/skills/linkedin-apply/: SKILL.md
.claude/skills/linkedin-apply/scripts/: tailor.py
apps/backend/: .gitignore  .vercelignore  nohup.out  pyproject.toml  requirements.txt  vercel.json
apps/backend/api/: index.py
apps/backend/app/: config.py  core.py  database.py  dependencies.py  main.py  schemas.py
apps/backend/app/routers/: config.py
apps/backend/app/services/: refiner.py
apps/backend/data/users/nishant/: database.json
apps/backend/data/users/sweta/: database.json
apps/backend/tests/: test_improver_diff.py  test_parser.py  test_refiner.py
apps/frontend/: next.config.ts  nohup.out  package-lock.json  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/(default)/: layout.tsx
apps/frontend/components/: UsernameFilter.tsx
apps/frontend/components/builder/: add-section-dialog.tsx  dynamic-section-form.tsx  formatting-controls.tsx  highlighted-resume-view.tsx  outreach-preview.tsx  regenerate-dialog.tsx  regenerate-diff-preview.tsx  regenerate-wizard.tsx  resume-builder.tsx  section-header.tsx  template-selector.tsx
apps/frontend/components/common/: error-boundary.tsx  resume_previewer_context.tsx
apps/frontend/components/dashboard/: resume-upload-dialog.tsx
apps/frontend/i18n/: config.ts
apps/frontend/lib/: api.ts
apps/frontend/messages/: en.json  es.json  ja.json  pt-BR.json  zh.json
docs/agent/design/: style-guide.md
(+24 files in other folders)
