[project]
name = "rm-backend"
version = "1.0.0"
description = "Resume Matcher Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.4",
    "uvicorn==0.40.0",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "litellm==1.81.8",
    "pypdf>=5.0.0",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.38",
    "psycopg[binary]>=3.1.0",  # Modern PostgreSQL driver with pre-built binary
    "beautifulsoup4==4.12.3",  # Lightweight HTML parsing (replaces playwright)
    "requests==2.31.0",  # HTTP client for LinkedIn scraping
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
